[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "passman"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
sqlite = { version = "0.30.4" }
whoami = { version = "1.3.0" }
rpassword = { version = "7.2" }
magic-crypt = { version = "3.1.12" }
rand = { version = "0.8.4" }